--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "@fontsource/roboto": "^5.0.8",
     "@mui/icons-material": "^5.15.4",
     "@mui/material": "^5.15.4",
+    "@mui/x-charts": "^6.18.7",
+    "@mui/x-data-grid": "^6.18.7",
     "@tanstack/react-query": "^5.17.9",
     "axios": "^1.6.5",
+    "dayjs": "^1.11.10",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
