--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,6 +22,7 @@ jobs:
         run: |
           touch .env
           echo VITE_SERVER_URL=${{ secrets.VITE_SERVER_URL }} >> .env
+          echo VITE_REDIRECT_SOCIAL_URL=${{ secrets.VITE_REDIRECT_SOCIAL_URL }} >> .env
 
       - name: Install
         run: npm install
