--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@mui/x-charts": "^6.18.7",
     "@mui/x-data-grid": "^6.18.7",
     "@tanstack/react-query": "^5.17.9",
+    "@tosspayments/payment-widget-sdk": "^0.10.2",
     "axios": "^1.6.5",
     "dayjs": "^1.11.10",
     "jwt-decode": "^4.0.0",
+    "nanoid": "^5.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.2",
